- Moved mShunned from Account to chars
- Added mJailed to chars with methods to identify a jailed player
- Added explicit override to GM teleport and jail/unjail commands (The only way to move someone if target is jailed)
- Completed shun/unshun command

====================
Namikon; 22.12.2006 22:55 GMT+1
----------
[rev. 60]
<internal version: 0.1.6 Dev>

- Added several security checks to game commands
- Added missing status outputs on successfull gamecommand
- Added solution to send an delayed positionupdate after warping

====================
Namikon; 23.12.2006 09:31 GMT+1
----------
[rev. 61]
<internal version: 0.1.7 Dev>

Small update:
- Removed ingamecommands "addworlditem", "delworlditem" and "adddoor". TinNS gets the worlddata dynamicly from loaded
  .dat files instead of MySQL Database.
  
commands.conf   : Removed config settings for the 3 commands mentioned above
commands.cpp/.h : Commented out the 3 mentioned commands
adddoor.cpp     : Commented out entire file
delworlditem.cpp: Commented out entire file
addworlditem.cpp: Commented out entire file

====================
Namikon; 23.12.2006 09:31 GMT+1
----------
[rev. 62-63]
<internal version: 0.1.8 Dev - 0.1.10 Dev>

- Added experimental char warp-aura and char disappear packets to all warp-commands
  (Worked while testing, but not after implementation into the commands)
- Worked on Chatsystem: Localchat 99% working. Localchat is now limited to a small area around the player
  (However, the chat is sent over TCP, like all other packets. It should be UDP, but this isnt working
  for some reason. If anyone finds out why, tell us please)
- Added Developercommand "@test". It has no fixed function, and is not configureable by config file.
  Devs can easily add stuff there to test various things.
- Removed adddoor, delworlditem and addworlditem completely from SVN, they're not needed anymore
- And a few things i cant remember -.-