@@ -126,8 +126,7 @@ class PClient
 		bool ChangeCharLocation(u32 nLocation, bool DoForce = false);
 
 		inline u16 GetUDP_ID() const { return mUDP_ID; }
-		//inline u16 GetSessionID() const { return 37917 + mUDP_ID ; }
-		inline u16 GetSessionID() const { return 50544 + mUDP_ID ; }
+		inline u16 GetSessionID() const { return 37917 + mUDP_ID ; }
 		inline u16 GetTransactionID() {return mTransactionID; }
 		inline int GetRemoteUDPPort() const { return mRemotePort; } // Temp solution
 
@@ -167,7 +166,7 @@ class PClient
             mTargetY = NewY;
             mTargetZ = NewZ;
         }
-        void CheckAwaitingWarpto();
+        bool CharIsAwaitingWarpto();
 
 
 		// used for dynamic ingame testing
