@@ -50,7 +50,6 @@ class PMsgBuilder
   PMessage* BuildCharHelloMsg(PClient* nClient);
   PMessage* BuildCharHealthUpdateMsg (PClient* nClient);
   PMessage* BuildCharPosUpdateMsg (PClient* nClient);
-  PMessage* BuildCharPosMoveMsg (PClient* nClient, u16 nNewX, u16 nNewY, u16 nNewZ);
   PMessage* BuildCharSittingMsg (PClient* nClient, u16 nData);
   PMessage* BuildCharExitChairMsg (PClient* nClient);
   PMessage* BuildCharJumpingMsg (PClient* nClient);
